--- a/index.html
+++ b/index.html
@@ -17,14 +17,6 @@
             color: #0d6efd;
             letter-spacing: 0.01em;
         }
-        .acknowledgements-title {
-            margin-top: 2.5rem;
-            margin-bottom: 1rem;
-            font-weight: bold;
-            font-size: 1.3rem;
-            color: #000;
-            letter-spacing: 0.01em;
-        }
         .card.h-100 {
             min-height: 210px;
             display: flex;
@@ -42,12 +34,14 @@
             border-color: #e83e8c !important;
         }
         .disclaimer-section {
-            margin-top: 3rem;
-            margin-bottom: 2rem;
+            margin: 2.5rem auto 2.5rem auto;
             font-size: 0.97rem;
             color: #6c757d;
             font-style: italic;
             text-align: center;
+            max-width: 1140px;
+            padding-left: 15px;
+            padding-right: 15px;
         }
         @media (max-width: 767px) {
             .card.h-100 {
@@ -71,6 +65,8 @@
         <h1 class="mb-3">Breast Cancer Calculators</h1>
         <p class="lead">
             This website provides a comprehensive suite of breast cancer calculators and risk assessment tools for healthcare professionals. The calculators are designed to assist with breast cancer prognostication, risk stratification, and treatment planning using validated models and up-to-date clinical evidence. Each tool is presented with transparent methodology and reference information, supporting informed clinical decision-making in both pathology and multidisciplinary settings.
+            <br><br>
+            We thank the clinicians, scientists, and investigators who have created these tools and made them available for anyone to use.
         </p>
         <p>
             The calculators are grouped as the following:
@@ -122,11 +118,6 @@
         </div>
 
         <hr class="my-4">
-
-        <div class="acknowledgements-title">Acknowledgements</div>
-        <p>
-            We thank the clinicians, scientists, and investigators who have created these tools and made them available for anyone to use.
-        </p>
     </div>
 
     <section class="disclaimer-section">
