--- a/recurrence-treatment.html
+++ b/recurrence-treatment.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background: #f6f8fa;
+            background: linear-gradient(pink, white);
         }
         .section-title {
             margin-top: 2.5rem;
@@ -26,6 +26,13 @@
         .card-title {
             min-height: 3.5rem;
         }
+        .btn-primary,
+        .btn-primary:active,
+        .btn-primary:focus,
+        .btn-primary:hover {
+            background-color: #e83e8c !important;
+            border-color: #e83e8c !important;
+        }
         @media (max-width: 767px) {
             .card.h-100 {
                 min-height: 0;
@@ -34,7 +41,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #e83e8c;">
         <div class="container-fluid justify-content-center">
             <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
             <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
@@ -43,7 +50,6 @@
             <a class="navbar-brand fw-bold mx-4" href="other-calculators.html">Other Calculators</a>
         </div>
     </nav>
-
 
     <div class="container my-4">
         <h1 class="mb-3">Recurrence/Treatment Calculators</h1>
@@ -78,4 +84,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
