--- a/recurrence-treatment.html
+++ b/recurrence-treatment.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background: linear-gradient(pink, white);
+            min-height: 100vh;
         }
         .section-title {
             margin-top: 2.5rem;
