--- a/risk-assessment.html
+++ b/risk-assessment.html
@@ -6,8 +6,18 @@
     <title>Risk Assessment Calculators</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        html, body {
+            height: 100%;
+            min-height: 100vh;
+        }
         body {
+            margin: 0;
+            min-height: 100vh;
+            background: none;
+        }
+        html {
             background: linear-gradient(pink, white);
+            min-height: 100vh;
         }
         .section-title {
             margin-top: 2.5rem;
