--- a/magee.html
+++ b/magee.html
@@ -12,7 +12,7 @@
             margin: 0;
         }
         body {
-            background: linear-gradient(pink, white);
+            background: linear-gradient(to bottom, #e83e8c 0%, #e83e8c 30%, white 30%, white 100%);
         }
         .calculator-container { 
             max-width: 800px; 
