--- a/magee.html
+++ b/magee.html
@@ -6,14 +6,17 @@
     <title>Magee Equations Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        html {
+        html, body {
             min-height: 100%;
-            background: linear-gradient(to bottom, #e83e8c 0%, white 100%);
+            height: auto;
+        }
+        html {
+            background: linear-gradient(to bottom, pink 0%, white 100%);
         }
         body {
-            min-height: 100%;
             margin: 0;
             background: transparent;
+            min-height: 100vh;
         }
         .calculator-container { max-width: 800px; margin: 2rem auto; padding: 20px; }
         .form-group { margin-bottom: 1.2rem; }
@@ -100,7 +103,7 @@
                     <h2 class="accordion-header">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#moreInfo" aria-expanded="true">
-                            More information
+                            Summary
                         </button>
                     </h2>
                     <div id="moreInfo" class="accordion-collapse collapse show"
