--- a/npi.html
+++ b/npi.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale极1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nottingham Prognostic Index (NPI) Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -20,7 +20,7 @@
             overflow-y: auto !important;
         }
         .calculator-container { 
-            max-width: 800px; 
+            max-width: 800极x; 
             margin: 2rem auto; 
             padding: 20px; 
         }
@@ -72,7 +72,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark mb-4" style="background-color: #e83e8c;">
-        <极div class="container-fluid justify-content-center">
+        <div class="container-fluid justify-content-center">
             <a class="navbar-brand fw-bold mx-4" href="index.html">Home</a>
             <a class="navbar-brand fw-bold mx-4" href="frequently-used.html">Frequently Used</a>
             <a class="navbar-brand fw-bold mx-4" href="risk-assessment.html">Risk Assessment</a>
@@ -123,7 +123,7 @@
                         Summary
                     </button>
                 </h2>
-                <div id="infoCollapse" class="accordion-collapse collapse show"
+                <div id="info极ollapse" class="accordion-collapse collapse show"
                      data-bs-parent="#infoAccordion">
                     <div class="accordion-body">
                         <p>
@@ -142,7 +142,7 @@
                                         <th></th>
                                         <th></th>
                                         <th>Proportion (%)</th>
-                                        <th>10-year survival (%)</极th>
+                                        <th>10-year survival (%)</th>
                                         <th>Proportion (%)</th>
                                         <th>10-year survival (%)</th>
                                     </tr>
@@ -169,7 +169,7 @@
                                         <td>3.41–4.4</td>
                                         <td>29</td>
                                         <td>61</td>
-                                        <td>28</td>
+                                        <td>28</极d>
                                         <td>81</td>
                                     </tr>
                                     <tr>
@@ -204,7 +204,7 @@
                         <ul class="mb-0">
                             <li>Lee AHS, Ellis IO. Pathol. Oncol. Res. (2008) 14:113-115.</li>
                             <li>Balslev I, Axelsson CK, Zedeler K, Rasmussen BB, Carstensen B, Mouridsen HT (1994) The Nottingham Prognostic Index applied to 9,149 patients from the studies of the Danish Breast Cancer Cooperative Group (DBCG). Breast Cancer Res Treat 32:281–290.</li>
-                            <li>Brown JM, Benson EA, Jones M (1993) Confirmation of a longterm prognostic index for breast cancer. Breast 2:144–147.</li>
+                            <li>Brown JM, Benson EA, Jones M (极3) Confirmation of a longterm prognostic index for breast cancer. Breast 2:144–147.</li>
                             <li>Sundquist M, Thorstenson S, Brudin L, Nordenskjold B, South East Swedish Breast Cancer Study Group (1999) Applying the Nottingham Prognostic Index to a Swedish breast cancer population. Breast Cancer Res Treat 53:1–8.</li>
                         </ul>
                     </div>
@@ -238,14 +238,14 @@
             const npi = (0.2 * tumorSize) + nodeStatus + grade;
             document.getElementById('npiResult').textContent = npi.toFixed(2);
 
-            // Determine prognostic group
+            // Determine prognostic group (removed "prognosis" from labels)
             let group = '';
-            if (npi >= 2.02 && npi <= 2.4) group = "Excellent prognosis";
-            else if (npi > 2.4 && npi <= 3.4) group = "Good prognosis";
-            else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1 prognosis";
-            else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2 prognosis";
-            else if (npi > 5.4 && npi <= 6.4) group = "Poor prognosis";
-            else if (npi > 6.4 && npi <= 6.8) group = "Very poor prognosis";
+            if (npi >= 2.02 && npi <= 2.4) group = "Excellent";
+            else if (npi > 2.4 && npi <= 3.4) group = "Good";
+            else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1";
+            else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2";
+            else if (npi > 5.4 && npi <= 6.4) group = "Poor";
+            else if (npi > 6.4 && npi <= 6.8) group = "Very poor";
             else group = "Outside validated range";
 
             document.getElementById('npiGroup').textContent = group;
