--- a/npi.html
+++ b/npi.html
@@ -20,7 +20,7 @@
             overflow-y: auto !important;
         }
         .calculator-container { 
-            max-width: 800极x; 
+            max-width: 800px; 
             margin: 2rem auto; 
             padding: 20px; 
         }
@@ -112,7 +112,6 @@
 
         <div class="result-alert alert alert-primary" role="alert">
             <h4>NPI Score: <span id="npiResult">-</span></h4>
-            <p class="mb-0" id="npiGroup"></p>
         </div>
 
         <div class="accordion mt-4" id="infoAccordion">
@@ -123,7 +122,7 @@
                         Summary
                     </button>
                 </h2>
-                <div id="info极ollapse" class="accordion-collapse collapse show"
+                <div id="infoCollapse" class="accordion-collapse collapse show"
                      data-bs-parent="#infoAccordion">
                     <div class="accordion-body">
                         <p>
@@ -169,7 +168,7 @@
                                         <td>3.41–4.4</td>
                                         <td>29</td>
                                         <td>61</td>
-                                        <td>28</极d>
+                                        <td>28</td>
                                         <td>81</td>
                                     </tr>
                                     <tr>
@@ -204,7 +203,7 @@
                         <ul class="mb-0">
                             <li>Lee AHS, Ellis IO. Pathol. Oncol. Res. (2008) 14:113-115.</li>
                             <li>Balslev I, Axelsson CK, Zedeler K, Rasmussen BB, Carstensen B, Mouridsen HT (1994) The Nottingham Prognostic Index applied to 9,149 patients from the studies of the Danish Breast Cancer Cooperative Group (DBCG). Breast Cancer Res Treat 32:281–290.</li>
-                            <li>Brown JM, Benson EA, Jones M (极3) Confirmation of a longterm prognostic index for breast cancer. Breast 2:144–147.</li>
+                            <li>Brown JM, Benson EA, Jones M (1993) Confirmation of a longterm prognostic index for breast cancer. Breast 2:144–147.</li>
                             <li>Sundquist M, Thorstenson S, Brudin L, Nordenskjold B, South East Swedish Breast Cancer Study Group (1999) Applying the Nottingham Prognostic Index to a Swedish breast cancer population. Breast Cancer Res Treat 53:1–8.</li>
                         </ul>
                     </div>
@@ -238,17 +237,6 @@
             const npi = (0.2 * tumorSize) + nodeStatus + grade;
             document.getElementById('npiResult').textContent = npi.toFixed(2);
 
-            // Determine prognostic group (removed "prognosis" from labels)
-            let group = '';
-            if (npi >= 2.02 && npi <= 2.4) group = "Excellent";
-            else if (npi > 2.4 && npi <= 3.4) group = "Good";
-            else if (npi > 3.4 && npi <= 4.4) group = "Moderate 1";
-            else if (npi > 4.4 && npi <= 5.4) group = "Moderate 2";
-            else if (npi > 5.4 && npi <= 6.4) group = "Poor";
-            else if (npi > 6.4 && npi <= 6.8) group = "Very poor";
-            else group = "Outside validated range";
-
-            document.getElementById('npiGroup').textContent = group;
             document.querySelector('.result-alert').style.display = 'block';
         }
 
