--- a/magee.html
+++ b/magee.html
@@ -178,7 +178,7 @@ Total H-Score = 0 + 30 + 80 + 60 = 170
                             </ul>
 
                             <h5>Webinar on the Magee Equations</h5>
-                            <p>February 20, 2025: Magee Equations Safe, Effective, and Underutilized 20250220 Bhargava</p>
+                            <p>February 20, 2025: Magee Equations Safe, Effective, and Underutilized https://www.youtube.com/watch?v=C8Pbo3O2SpI</p>
                             <h5>References - Internal Publications</h5>
                             <ul>
                                 <li><a href="https://www.ncbi.nlm.nih.gov/pubmed/40357830" target="_blank">Bedell M et al (2025)</a></li>
