--- a/magee.html
+++ b/magee.html
@@ -179,7 +179,7 @@ Total H-Score = 0 + 30 + 80 + 60 = 170
 
                             <h5>Webinar on the Magee Equations</h5>
                             <p>February 20, 2025: Magee Equations Safe, Effective, and Underutilized
-                                  <li><a href="https://www.youtube.com/watch?v=C8Pbo3O2SpI"</a></li>
+                                <li><a href="https://www.youtube.com/watch?v=C8Pbo3O2SpI" target="_blank">Bhargava20250220</a></li>
                              </p>
                             <ul>
                             <h5>References - Internal Publications</h5>
