--- a/hscore.html
+++ b/hscore.html
@@ -89,7 +89,7 @@
                 <input type="number" class="form-control" id="strong" min="0" max="100" step="1" required>
             </div>
             <button type="button" class="btn btn-primary" onclick="calculateHScore()">Calculate</button>
-            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pmc.ncbi.nlm.nih.gov/articles/PMC11141889/', '_blank')">More Information</button>
+            <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/18360352/', '_blank')">More Information</button>
             <button type="button" class="btn btn-outline-secondary ms-2" onclick="window.open('https://pubmed.ncbi.nlm.nih.gov/?term=H-score+immunohistochemistry', '_blank')">PubMed</button>
         </form>
 
