--- a/pepi.html
+++ b/pepi.html
@@ -80,7 +80,7 @@
     <div class="calculator-container">
         <h2>Pre-operative Endocrine Prognostic Index (PEPI) Score Calculator</h2>
         <p>
-            Calculates the PEPI score for professionals managing patients who received neoadjuvant endocrine therapy, based on pT stage, pN stage, Ki67 level, and ER status of the surgical specimen.
+            Calculates the PEPI score for determining relapse-free survival (RFS) in patients who received neoadjuvant endocrine therapy, based on pT stage, pN stage, Ki67 level, and ER status of the surgical specimen.
         </p>
         
         <form id="pepiForm">
@@ -178,7 +178,7 @@
                         </div>
                         <p>
                             <strong>Scoring and Interpretation:</strong><br>
-                            A hazard ratio in the range of 1–2 receives 1 risk point; a hazard ratio in the 2–2.5 range, 2 risk points; a hazard ratio greater than 2.5, 3 risk points. Best prognosis for PEPI score of 0; Intermediate for PEPI score of 1–3; Worse prognosis for PEPI score of 4 or higher.
+                            A hazard ratio in the range of 1–2 receives 1 risk point; a hazard ratio in the 2–2.5 range, 2 risk points; a hazard ratio greater than 2.5, 3 risk points. Best prognosis for PEPI score of 0; Intermediate for PEPI score of 1–3; Worse prognosis for PEPI score of 4 or higher. Note that the points for RFS and BCSS are slightly different for Ki-67 index. The above calculator determines the PEPI score for RFS.
                         </p>
                     </div>
                 </div>
